Disable class-path isolation by default.